export const DURATION = [
    { value: 1, label: '1 hr', },
    { value: 2, label: '2 hr', },
    { value: 3, label: '3 hr', },
    { value: 4, label: '4 hr', },
    { value: 5, label: '5 hr', },]

export const activesgSpaceSummary = {
    // "Badminton Court": {
    //     "968": {
    //         "id": "968",
    //         "title": "Admiralty Primary School Hall",
    //         "images": ["https://members.myactivesg.com/assets/images/logo.png"],
    //         "location": {
    //             "address": "11, ADMIRALTY PRIMARY SCHOOL, WOODLANDS CIRCLE, ",
    //             "latitude": 1.442635,
    //             "longitude": 103.80004
    //         },
    //         "price": 0,
    //         "peakPrice": 7.4,
    //         "offPeakPrice": 0.0,
    //         "peakPrice(non-sg)": 9.7,
    //         "offPeakPrice(non-sg)": 0.0,
    //         "openingHours": [0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0],
    //         "inactive": false,
    //         "third_party": true,
    //         "spaceType": "multiple"
    //     }
    // }
}