...
          }}>
            <View
              style={{ flex: 1 }}
            />
            <View style={{ flex: 2 }}>
              <SearchBar
                testID="search-bar"
                placeholder="What are you doing today?"
                icon="search"
                size={20}
                // setSearch={() => setSearch(true)}
                setSearch={async () => {
                  const networkState = await Network.getNetworkStateAsync();
...
                    // Device is not connected to the internet
                    showOfflineAlert()
                  }
                }}
              />
              <View style={styles.balanceContainer}>
                <View testID="wallet-balance">
                  <Typography.H2 bold >{"SGD " + (props?.user?.wallet?.sgd / 100 || 0).toFixed(2)}</Typography.H2>
                  <Typography.pS>{process.env.EXPO_PUBLIC_TYPE !== 'TEST' ? "Wallet Balance" : !isNaN(props?.user?.wallet?.sgd) ? "Wallet Balance" : ""}</Typography.pS>
                </View>
                <TouchableOpacity
                  testID="top-up-button"
                  style={{
...
                </TouchableOpacity>
              </View>
              {quickSearches.length != 0 && <View style={styles.txnsContainer}>
                <FlatList
                  ListHeaderComponent={
                    <Header>
                      <Typography.H color={colors.red}>{'Quick Search'}</Typography.H>
                    </Header>
                  }
                  data={quickSearches}
                  extraData={quickSearches}
                  keyExtractor={(item, index) => index.toString()}
                  renderItem={({ item, index }) =>
...
